# zero2prod

./: Cargo.toml
migrations/2024-01-23-235241_create_subscribtions_table/: down.sql  up.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
