[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.195", features = ["derive"] }
diesel = "2.1.4"
diesel-async = { version = "0.4.1", features = ["postgres"] }

[dev-dependencies]
reqwest = "0.11"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
